Fix spacing issues under time

--- a/imports/styles/stop.import.styl
+++ b/imports/styles/stop.import.styl
@@ -81,7 +81,8 @@
   font-weight 600
   margin 0 0 .1em 0
 
-.child-stop-subTitle
+.child-stop-subTitle,
+.child-stop-time
   margin 0
   color $d-gray
   font-size 95%
@@ -93,7 +94,9 @@
     padding 3px 0 10px 0
   &.single
     padding 3px 0 15px 0
-    // background $ll-gray
+
+.child-stop-time
+  padding-bottom 0
 
 $stop-nav-border-color = darken($primary, 20%)
 
